Mon Nov 14 12:14:41 2005  Chad Elliott  <elliott_c@ociweb.com>

        * expected/conditional_specific_verbatim_wildcards/nmake/source/Makefile.csvw_A.mak:
        * expected/conditional_specific_verbatim_wildcards/nmake/source/Makefile.csvw_B.mak:
        * expected/conditional_specific_verbatim_wildcards/nmake/source/Makefile.csvw_C.mak:
        * expected/conditional_specific_verbatim_wildcards/nmake/source/Makefile.csvw_D.mak:
        * expected/conditional_specific_verbatim_wildcards/nmake/source/Makefile.csvw_E.mak:
        * expected/features_custom_only/nmake/source/Makefile.fco.mak:
        * expected/features_custom_only/nmake/source/Makefile.fco_use.mak:
        * expected/implicit_projects/nmake/source/one/Makefile.one.mak:
        * expected/wide_coverage/nmake/generator/Makefile.generator_be.mak:

          Updated to reflect my change from Mon Nov 14 12:06:15 2005.

Fri Oct 28 11:43:21 2005  Chad Elliott  <elliott_c@ociweb.com>

        * expected/wide_coverage/bmake/generator/Makefile.generator.bmak:

          Updated to reflect Johnny Willemsen's change from Sun Oct 23
          08:14:12 UTC 2005.

Fri Oct 14 06:46:24 2005  Chad Elliott  <elliott_c@ociweb.com>

        * expected/conditional_specific_verbatim_wildcards/vc8/conditional_specific_verbatim_wildcards.sln:
        * expected/features_custom_only/vc8/features_custom_only.sln:
        * expected/grouping/vc8/grouping.sln:
        * expected/implicit_projects/vc8/implicit_projects.sln:
        * expected/wide_coverage/vc8/wide_coverage.sln:

          Updated to reflect Steve Huston's changes from Thu Oct 13 17:24:21
          2005.

Fri Oct  7 14:06:12 2005  Chad Elliott  <elliott_c@ociweb.com>

        * expected/grouping/automake/source/Makefile.am:
        * expected/wide_coverage/automake/source/Makefile.am:

          Updated to reflect J.T's change from Fri Oct  7 09:33:41 2005.

Fri Oct  7 09:33:50 2005  Chad Elliott  <elliott_c@ociweb.com>

        * expected/*/vc8/*.vcproj:
