@@ -9,7 +9,7 @@ CPPFLAGS      = $(PICFLAGS) $(GENFLAGS) -D_REENTRANT -DONLY_MAKE -DONLY_UNIX
 OBJEXT        = .o
 OUTPUT_OPTION = -o "$@"
 COMPILE.cc    = $(CXX) $(CCFLAGS) $(CPPFLAGS) -c
-LDFLAGS       = -L.
+LDFLAGS       = -L"."
 CCC           = $(CXX)
 MAKEFILE      = Makefile.csvw_C
 DEPENDENCIES  = .depend.$(MAKEFILE)
