@@ -9,7 +9,7 @@ CPPFLAGS      = $(PICFLAGS) $(GENFLAGS) -D_REENTRANT
 OBJEXT        = .o
 OUTPUT_OPTION = -o "$@"
 COMPILE.cc    = $(CXX) $(CCFLAGS) $(CPPFLAGS) -c
-LDFLAGS       = -L.
+LDFLAGS       = -L"."
 CCC           = $(CXX)
 MAKEFILE      = Makefile.grouping_E
 DEPENDENCIES  = .depend.$(MAKEFILE)
