@@ -5,11 +5,11 @@ CXX           = g++
 LD            = $(CXX) $(CCFLAGS) $(CPPFLAGS)
 AR            = ar
 PICFLAGS      = -fPIC
-CPPFLAGS      = $(PICFLAGS) $(GENFLAGS) -D_REENTRANT -I..
+CPPFLAGS      = $(PICFLAGS) $(GENFLAGS) -D_REENTRANT -I".."
 OBJEXT        = .o
 OUTPUT_OPTION = -o "$@"
 COMPILE.cc    = $(CXX) $(CCFLAGS) $(CPPFLAGS) -c
-LDFLAGS       = -L. -L../../lib
+LDFLAGS       = -L"." -L"../../lib"
 CCC           = $(CXX)
 MAKEFILE      = Makefile.two
 DEPENDENCIES  = .depend.$(MAKEFILE)
@@ -21,7 +21,7 @@ NUL           = /dev/null
 MKDIR         = mkdir -p
 EXEEXT        = 
 LIBPREFIX     = lib
-LDLIBS        = -lone -ldl -lpthread
+LDLIBS        = -l"one" -ldl -lpthread
 OBJS          = two$(OBJEXT)
 GENFLAGS      = -g
 SRC           = two.cpp
