@@ -9,7 +9,7 @@ CPPFLAGS      = $(PICFLAGS) $(GENFLAGS) -D_REENTRANT
 OBJEXT        = .o
 OUTPUT_OPTION = -o "$@"
 COMPILE.cc    = $(CXX) $(CCFLAGS) $(CPPFLAGS) -c
-LDFLAGS       = -L. -L../lib
+LDFLAGS       = -L"." -L"../lib"
 CCC           = $(CXX)
 MAKEFILE      = Makefile.generator_be
 DEPENDENCIES  = .depend.$(MAKEFILE)
